# coat2pycsw

./: .gitignore  Dockerfile  README.md  coat2pycsw.py  docker-compose.yml  entrypoint.sh  pycsw.conf.template  pyproject.toml
.github/workflows/: docker.yaml
mappings/: tags.yaml  topics.yaml
